WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225964
Fix flex-aspect-ratio-002+004.html
https://bugs.webkit.org/show_bug.cgi?id=225964
Summary
Fix flex-aspect-ratio-002+004.html
Rob Buis
Reported
2021-05-19 00:57:44 PDT
Fix flex-aspect-ratio-02+04.html.
Attachments
Patch
(6.57 KB, patch)
2021-05-19 01:01 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2021-05-19 01:01:01 PDT
Created
attachment 429039
[details]
Patch
EWS Watchlist
Comment 2
2021-05-19 01:01:56 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Sergio Villar Senin
Comment 3
2021-05-19 04:42:17 PDT
Comment on
attachment 429039
[details]
Patch Makes total sense! thanks for the patch
EWS
Comment 4
2021-05-19 04:54:21 PDT
Committed
r277717
(
237896@main
): <
https://commits.webkit.org/237896@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429039
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-05-19 04:55:16 PDT
<
rdar://problem/78200862
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug