https://bugs.webkit.org/show_bug.cgi?id=225964 Fix flex-aspect-ratio-002+004.html

Patch by Rob Buis <rbuis@igalia.com> on 2021-05-19
Reviewed by Sergio Villar Senin.

LayoutTests/imported/w3c:

Import tests.

* web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-ratio-002.html:
* web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-ratio-004.html:

Source/WebCore:

Flex should not do transferred size suggestion for non-replaced aspect-ratio items:
https://drafts.csswg.org/css-flexbox-1/#min-size-auto

Tests: imported/web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-ratio-002.html
       imported/web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-ratio-004.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::adjustChildSizeForMinAndMax):

Canonical link: https://commits.webkit.org/237896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277717 268f45cc-cd09-0410-ab3c-d52691b4dbfc